tests/e2e/testdata/compiled-cases/input-validation/stacks/invalid/below-min-length.ub
stack: {
  state: local {
    path: '.unobin/state'
  }

  encryption: noop {}

  factory: {
    inputs: {
      required-name: 'web'
      short-name: 'a'
    }
  }
}
